# blender4all

./: .gitignore  README.md  pyproject.toml  stub_server.py
.claude/: launch.json
addon/farmhand_submit/: __init__.py  client.py  operators.py  panel.py
coordinator/: __init__.py  db.py  main.py  models.py
coordinator/static/: status.html
docs/: render-farm-plan.html
packaging/: FarmhandWorkerTask.xml  farmhand-worker.service
shared/: API.md
tests/: test_addon_client.py  test_coordinator.py  test_docs.py  test_worker.py
worker/: __init__.py  agent.py  config.example.toml
